<resources>
    <string name="app_name">Hilightr</string>
    <!-- Facebook -->
    <string name="facebook_app_id">1097046467058671</string>
    <string name="fb_login_protocol_scheme">fb1097046467058671</string>

    <!-- Miscellaneous -->


    <!-- Global -->
    <string name="delete_highlight">Highlight deleted</string>

    <!-- Login fragment -->
    <string name="about_footer">About</string>

    <!-- Main fragment -->
    <string name="menu_filter">Filter</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_search">Search</string>

    <!-- Edit fragment -->
    <string name="toolbar_create">Create hilight</string>
    <string name="toolbar_edit">Edit hilight</string>
    <string name="title_hint">Title</string>
    <string name="place_hint">Place</string>
    <string name="message_hint">Message</string>
    <string name="menu_done">Save changes</string>
    <string name="menu_delete">Delete</string>
    <string name="error_empty_field">This cannot be left empty</string>

    <!-- Dialog filter -->
    <string name="filter_by">Filter by</string>
    <string name="filter_value">Filter value</string>
    <string name="sort_by">Sort by</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="positive_text">Done</string>
    <string name="negative_text">Cancel</string>
    <string name="person">Person</string>
    <string name="date">Date</string>
    <string name="subtext_placeholder">Tap to choose</string>

    <!-- Dialog search -->
    <string name="search_by">Search by</string>
    <string name="search_hint">Search term</string>
</resources>
